Changelog
=========

2.0.4 - unreleased
------------------


2.0.3 - 2010-01-02
------------------

* Made 'update_sitemanager_bases_handler' fail silently instead of raising an
  error. This allows to import broken sites, in particular old CMF sites.
  [yuppie]

2.0.2 - 2009-11-15
------------------

* Fix regression in five.localsitemanager 2.0.1 where unregistering a utility
  based on its provided interface broke if no utility was registered for that
  interface.
  [davisagli]

2.0.1 - 2009-10-19
------------------

* Adapt unregistering of components work to work with latest zope.component.
  [hannosch]

* Fix unregistering of components which have a physical path.
  [thefunny42]

2.0 - 2009-09-27
----------------

* Cleaned up package documentation and fixed spelling errors in the tests.
  [hannosch]

* Made sure that the __of__ method is only called on objects providing the
  IAcquirer interface.
  [hannosch]

* Updated forked registerUtility method to match the zope.component 3.7.1
  code base. This fixes the two bugs with the implicit unregistration of
  utilities for existing interface / name pairs.
  [hannosch]

* Simplified some code, aq_parent now respects __parent__ pointers.
  [hannosch]

2.0a1 - 2009-05-27
------------------

* Updated to use IObjectMovedEvent from zope.lifecycleevent instead of
  zope.container. We require zope.lifecycleevent >= 3.5.2 now.
  [hannosch]

* Removed package dependencies that did collide with the KGS of Zope 2.12.
  [yuppie]

* Adjusted code to use the new zope.site and zope.container packages and use
  the ISite interface from zope.location.
  [hannosch]

* Specify all package dependencies including Acquisition and Zope2. You need
  to use either the eggified Zope 2.12 or create fake-eggs for these.
  [hannosch]

* 'make_site' no longer stores the path of the site manager in its name. This
  way the name can't become out-dated. PersistentComponents' __repr__ method