@@ -4,6 +4,9 @@ Changelog
 2.0.4 - unreleased
 ------------------
 
+* Provide a more meaningful error message if the current site is not set
+  correctly or the Acquisition chain of the site is messed up.
+  [hannosch]
 
 2.0.3 - 2010-01-02
 ------------------
